Changelog :  - Fix all teaser to align with new design

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/fontoverride/com/components/c-teaser.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/fontoverride/com/components/c-teaser.less
@@ -1,7 +1,9 @@
 .c-teaser {
     &__wrapper {
         &__title {
-            font: @kicker-desktop-fontsize-22 @freight-bold;           
+            font: @subheader-desktop-fontsize-24 @freight-bold;           
+            padding-bottom:12px !important;
+            text-transform:capitalize;
             @media screen and (max-width: @screen-sm) {              
                 font-family: @freight-bold;              
                 font-size: @subheader-mobile-fontsize-20;                
@@ -18,10 +20,12 @@
         }
     }
     &__link {      
-        font-size: 100%;        
+        font-size: @button-desktop-fontsize-13;   
+        color:@color-second;         
         font-family: @suisse;             
+        font-weight: normal;
         @media screen and (max-width: @screen-sm) {           
-            font-size: @button-mobile-fontsize-11;           
+            font-size: @button-mobile-fontsize-12;           
         }     
     }
 }
