--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/fontoverride/com/general.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/fontoverride/com/general.less
@@ -108,3 +108,23 @@ h1 {
 
 .h-serif{font-family:@freight-bold;}
 .h-sansserif{font-family:@suisse;}
+
+
+/*
+ * GENERAL OVERRIDE
+ */
+ 
+.thumbnail .c-vertical-teaser__caption { 
+    padding: 12px 20px 40px !important;
+}
+.exclusiveOfferList .thumbnail .c-vertical-teaser__caption {
+    padding: 12px 20px 30px !important;
+}
+
+.exclusiveOfferList .c-vertical-teaser.thumbnail.benefitsandevents .c-vertical-teaser__description {
+    margin-top: 0px;
+}
+
+.c-vertical-teaser__title {
+    margin-bottom: 0px;
+}
