--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/fontoverride/ssc/components/c-customteaser.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/fontoverride/ssc/components/c-customteaser.less
@@ -1,7 +1,9 @@
 .c-custom-teaser {
 	&-title {
 	    font-family: @freight-bold;	    
-	    font-size: 20px;	    
+	    font-size: @subheader-desktop-fontsize-24;	    
+	    padding-bottom:12px !important;
+	    text-transform:none;
 	}	
 	&-description {
 		font-size: @body-desktop-fontsize-14;    	
